# guake

./: .Makefile.swp  .deepsource.toml  .directory  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  .yapf  AUTHORS  ChangeLog  DOCKER.md  Dockerfile.dev  INSTALL  MAINTAINERS  MANIFEST.in  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  NEWS.rst  Pipfile  QUICKSTART.md  README  README.rst  RELEASENOTES.rst  SETUP_DEV.md  TODO  autogen.sh  bootstrap-debian.sh  bootstrap-dev-debian.sh  bootstrap-pip.sh  build_guake.bash  build_guake_test.bash  config.h  config.h.in  config.status  configure.ac  (+25 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: Makefile  Makefile.am  Makefile.in  about.glade  about.ui  autostart-guake.desktop  custom_commands_help.glade  gschemas.compiled  guake-autoconfigure.desktop.in  guake-autostart.desktop.in  guake-prefs.desktop.in  guake.1  guake.appdata.xml  guake.desktop.in  guake.glade  guake.schemas  guake.ui  loggin.conf  org.gnome.Guake.service.in  org.guake.Guake.service.in  org.guake.gschema.xml  prefs.glade  prefs.ui  schema.guake.gschema.xml  search.glade  test.glade
data-gtk3/: about.glade  gschemas.compiled  guake-converted.schema  guake.glade  prefs.glade  schema.guake.gschema.xml
data/gtkobjects/: prefs.ui
data/icons/: Makefile  Makefile.am  Makefile.in
data/pixmaps/: Makefile  Makefile.am  Makefile.in
data/settings/: org.guake.keybindings.gschema.xml
data/ui/: about.ui  app.ui  app_orig.ui  menus.ui  setting.ui  settings.ui
debian/: changelog  control  copyright  files  guake.1  guake.substvars  manpages  menu  rules  watch
doc/: Makefile  make.bat
doc/source/: build.sh  conf.py  conf.py.in  index.rst
doc/src/: conf.py.in  preview.sh
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
git-hooks/: post-commit
guake/: Keybindings.py  __init__.py  __main__.py  about.py  app.py  application.py  boxes.py  callbacks.py  common.py  customcommands.py  dbus_manager.py  dbusiface.py  dconf_handler.py  dialogs.py  globals.py  globals.py.in  gsettings.py  gtk3test.py  guake  guake-prefs  guake.py  guake_app.py  guake_logging.py  guake_notebook.py  guake_toggle.py  keybindings.py  logging.py  main.py  menus.py  notebook.py  notifier.py  palettes.py  paths.py.in  prefs.py  settings.py  simplegladeapp.py  split_utils.py  support.py  terminal.py  test_terminal.py  (+2 more)
guake/application/: __init__.py  actions.py  application.py  keybindings.py
guake/data/: about.glade  autostart-guake.desktop  gschemas.compiled  guake-prefs.desktop  guake-prefs.template.desktop  guake.appdata.xml  guake.desktop  guake.desktop.metainfo.xml  guake.glade  guake.schema  guake.template.desktop  org.guake.gschema.xml  prefs.glade  schema.guake.gschema.xml
guake/globalhotkeys/: globalhotkeys.c  testbinding.c
guake/tests/: __init__.py  python-backtrace.trace  test_about.py  test_guake.py  test_menus.py  test_notebook.py  test_osc52.py  test_quick_open.py  test_split_utils.py  test_terminal.py  test_utils.py
guake/widgets/: __init__.py  application_window.py  box.py  main_menu.py  notebook.py  settings_window.py  terminal.py  widget.py
m4/: acinclude.m4  intltool.m4
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES.in  ca.po  cs.po  cs_CZ.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  it_IT.po  ja.mo  ja.po  ko.po  nb.po  nb_NO.po  nl.po  no.po  no_NB.po  pa.po  pl.po  pt_BR.mo  pt_BR.po  ru.po  ru_RU.po  sv.po  tr.po  uk.po  uk_UA.po  zh_CN.po  zh_Hant.po  (+1 more)
releasenotes/: config.yaml
releasenotes/archive/: NEWS.pre-3.0
releasenotes/notes/: Add-window-displacement-options-to-move-guake-away-from-the-edges-1b2d46997e8dbe91.yaml  Allow-reset-of-show-hide-hot-key-f1a2b04c9b3787a0.yaml  Changed_default_keybindig_to_toggle_hide_on_lose_focus-44a261e8c41e01d1.yaml  Fix-run-command-as-login-shell-517683bd988aa06a.yaml  Fix_typo_in_error_log_message-3bc0374cda2dc957.yaml  Reimplemented-Refocus-6fdd3242caf8b388.yaml  [Add_open_link_under_terminal_cursor_accelerator]-6bd83e590f8403d9.yaml  [set_term_program_name]-14f1c2e5efddde2d.yaml  (+260 more)
scripts/: all-sitedirs-in-prefix.py  bootstrap-dev-arch.sh  bootstrap-dev-debian.sh  bootstrap-dev-fedora.sh  bootstrap-dev-pip.sh  find-first-site-package.py  run-local-prefs.sh  run-local.sh  setup-dev.sh  test-exception.py  weird_urls.sh
src/: Makefile.am  common.py  conf.py  dbusiface.py  globals.py.in  gtk-theme-swatch.py  guake  guake-prefs  guake-prefs.in  guake.in  guake.py  guake_globals.py.in  notifier.py  prefs.py  print_gtk_colors.py  simplegladeapp.py  simplegtkapp.py  statusicon.py  terminal.py
src/eggcellrendererkeys/: Makefile.am  cellrendererkeys.defs  cellrendererkeys.override  cellrendererkeysmodule.c  eggaccelerators.c  eggaccelerators.h  eggcellrendererkeys-arg-types.py  eggcellrendererkeys.c  eggcellrendererkeys.h
src/globalhotkeys/: Makefile.am  bind.c  eggaccelerators.c  eggaccelerators.h  example.py  globalhotkeys.c  keybinder.c  keybinder.h  testbinding.c
src/guake/: .directory  Keybindings.py  Makefile.am  __init__.py  __main__.py  about.py  app.py  application.py  common.py  dbus_manager.py  dbusiface.py  gconfhandler.py  globals.py.in  gsettings.py  gtk-theme-swatch.py  gtk3test.py  guake.py  guake_app.py  guake_notebook.py  logging.py  main.py  notifier.py  notifier3.py  palettes.py  prefs.py  print_gtk_colors.py  simpleglade3app.py  simplegladeapp.py  terminal.py  terminal3.py  test_terminal.py  utils.py
src/guake/globalhotkeys/: Makefile.am  eggaccelerators.c  keybinder.h
src/guake/tests/: python-backtrace2.trace  test__guake_app.py  test__prefs.py  test_quit_edit.py
src/guake/widgets/: __init__.py  app_window.py  application_window.py  box.py  mixin.py  notebook.py  root_window.py
src/tests/: make-c-current-directory.trace  sphinx-error.trace  test__guake_app.py  test__prefs.py  test_quit_edit.py  test_utils.py
src/tests/widgets/: test_appwindow.py  test_root_window.py
(+42 files in other folders)
