[tool]
[tool.poetry]
name = "guake"
version = "3.7.0"
description = "Drop-down terminal for GNOME"
authors = [
    "Gaetan Semet <gaetan@xeberon.net>"
]
readme = "README.rst"
repository = "https://github.com/Guake/guake"
homepage = "http://guake-project.org/"
documentation = "https://guake.readthedocs.io/"
keywords = ["guake", "guake-terminal", "terminal", "terminal-emulator"]
license = "GPL-2.0-only"
exclude = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Guake/guake/issues"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = "==3"
pbr = "*"
typing = {python = "<3.5", version = "*"}

[tool.poetry.dev-dependencies]
astroid = "<2.2.0"
autopep8 = "*"
colorlog = "*"
fiximports = ">=0.1.18"
flake8 = "<=3.6.0"
mock = ">=2.0.0"
pathlib2 = "*"
pep8 = "*"
pew = "*"
pyfakefs = "*"
pyflakes = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
reno = {version = ">=2.8.0", extras = ["sphinx"]}
scandir = {python = "<3.5", version = "*"}
sphinx-rtd-theme = "*"
sphinxcontrib-programoutput = "*"
twine = "*"
# typed-ast = "<1.4.0,>=1.3.1"
yapf = "*"
