[metadata]
name = Guake
summary = Guake Terminal
description-file = README.rst
author = Gaetan Semet
author-email = gaetan@xeberon.net
home-page = https://github.com/Guake/guake
# https://pypi.python.org/pypi?%3Aaction=list_classifiers check this list for classifiers
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Terminals
    Topic :: Terminals :: Terminal Emulators/X Terminals
    Topic :: Desktop Environment :: Gnome

[files]
packages =
    guake
    guake/data
package_files =
    guake = guake/*
    guake/data = guake/data/*

[entry_points]
console_scripts =
    guake = guake.main:exec_main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[pep8]
max-line-length = 100
