[metadata]
name = guake
summary = Guake Terminal
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = COPYING
author = Gaetan Semet
author_email = gaetan@xeberon.net
home_page = https://github.com/Guake/guake
# https://pypi.python.org/pypi?%3Aaction=list_classifiers check this list for classifiers
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Terminals
    Topic :: Terminals :: Terminal Emulators/X Terminals
    Topic :: Desktop Environment :: Gnome

[options]
packages =
    guake
setup_requires =
    setuptools>=57.5.0
    setuptools_scm
install_requires =
    importlib_metadata; python_version < '3.8'
    typing; python_version < '3.5'

[options.entry_points]
console_scripts =
    guake = guake.main:exec_main
    guake-toggle = guake.guake_toggle:toggle_guake_by_dbus

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[pep8]
max-line-length = 100
