SUBDIRS = globalhotkeys

guakemoduledir = $(pkgpythondir)
guakemodule_PYTHON = __init__.py \
                     globals.py common.py simplegtkapp.py \
                     dbusiface.py prefs.py conf.py terminal.py \
                     notifier.py

guakedir = $(bindir)
bin_SCRIPTS = guake guake-prefs
