pixmapsdir = $(datadir)/pixmaps/guake
pixmaps_DATA = \
	close.svg \
	guake.svg \
	left_in.svg \
	statusicon_out.png \
	tabup.svg \
	down_in.svg \
	guake.png \
	left_normal.svg \
	new_guakelogo.png \
	right_in.svg \
	statusicon_over.png \
	up_in.svg \
	add_tab.png \
	down_normal.svg \
	guakelogo.svg \
	littleguakelogo.png \
	right_normal.svg \
	tabdown.svg \
	up_normal.svg


EXTRA_DIST = $(pixmaps_DATA)
