SUBDIRS = globalhotkeys

guakemoduledir = $(pkgpythondir)
guakemodule_PYTHON = __init__.py \
                     globals.py \
                     common.py \
                     simplegladeapp.py \
                     dbusiface.py \
                     main.py \
                     prefs.py \
                     notifier.py \
                     about.py \
                     gconfhandler.py \
                     terminal.py

guakedir = $(bindir)
bin_SCRIPTS = guake guake-prefs

EXTRA_DIST = $(bin_SCRIPTS)
