SUBDIRS = globalhotkeys

guakemoduledir = $(pkgpythondir)
guakemodule_PYTHON = __init__.py \
                     about.py \
                     common.py \
                     dbusiface.py \
                     gconfhandler.py \
                     globals.py \
                     guake.py \
                     main.py \
                     notifier.py \
                     prefs.py \
                     simplegladeapp.py \
                     terminal.py

guakedir = $(bindir)
bin_SCRIPTS = guake guake-prefs

EXTRA_DIST = $(bin_SCRIPTS)
