guakemoduledir = $(pkgpythondir)
guakemodule_PYTHON = __init__.py \
                     __main__.py \
                     about.py \
                     common.py \
                     dbusiface.py \
                     gconfhandler.py \
                     globals.py \
                     guake_app.py \
                     guake_notebook.py \
                     main.py \
                     notifier.py \
                     prefs.py \
                     simplegladeapp.py \
                     terminal.py \
                     palettes.py

guakedir = $(bindir)
bin_SCRIPTS = guake guake-prefs

EXTRA_DIST = $(bin_SCRIPTS)
